Fix some spacing issues, add active state for nav bar, start flavor page

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   }
 
 body, html {
-    /* height: 100%; */
     font-family: "Assistant";
     background: #F5F4EE;
     color: #5C241B;
@@ -18,7 +17,6 @@ body, html {
 
 
 nav {
-  width: 100%;
   background-color: #5C241B;
   display: flex;
   justify-content: space-between;
@@ -46,11 +44,15 @@ nav {
   height: auto;
 }
 
-.nav-item:hover {
-  background-color: white;
-  height: 1px;
-
+.nav-item a:hover {
+  border-bottom: 0.5px solid white;
 }
+
+.nav-item a.active-nav {
+  border-bottom: 0.5px solid white;
+  width: 50%;
+}
+
 
 
 .logo img {
@@ -78,7 +80,7 @@ nav {
   background-repeat: no-repeat;
   background-size: cover;
 
-  width: 1440px;
+  width: 100%;
   height: 877px;
 
 }
@@ -90,7 +92,6 @@ nav {
 }
 
 h1 {
-
   width: 980px;
   height: 181px;
   margin-top: 92px;
@@ -158,19 +159,15 @@ h2 {
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto auto;
-  justify-content: center;
+  justify-items: center;
+  margin-left: 90px;
+  margin-right: 90px;
 }
 
 .map {
-  background-image: url("images/map.jpg");
-  background-position: center;
-  background-size: cover;
-  width: 634px;
-  height: 480px;
-  z-index: 1;
   margin-top: 70px;
-  margin-left: 90px;
-  float: left;
+  width: 100%;
+  
 }
 
 .map-bar {
@@ -178,13 +175,13 @@ h2 {
   grid-template-rows: 50% 50%;
   grid-template-columns: 50% 50%;
   background-color: #5C241B;
-  width: 634px;
+  width: 100%;
   height: 100px;
-  margin-left: 90px;
   color: white;
   text-align: center;
   padding-top: 30px;
   margin-bottom: 140px;
+ 
 }
 
 .location-icon {
@@ -202,12 +199,12 @@ h2 {
 
 .our-shop-details {
   background-color: #ECEAE0;
-  width: 619px;
-  height: 610px;
+  width: 100%;
+  height: 615px;
   text-align: center;
   margin-top: 70px;
   margin-bottom: 140px;
-  justify-content: center;
+  justify-items: center;
 }
 
 .our-shop-details h4 {
@@ -218,27 +215,26 @@ h2 {
   margin-top: 70px;
 }
 
-#shop-description {
-  margin-top: 50px;
-  width: 420px;
-  margin-left: 100px;
-  font-size: 18px;
+.shop-description {
+  margin: 70px 90px 50px 90px;
+  
 }
 
 #shop-hours {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 45% 55%;
   margin-top: 80px;
-  text-align: center;
+  justify-items: center;
 }
 
 #shop-hours img {
-  margin-left: 250px;
+  justify-self: end;
+  margin-right: 20px;
 }
 
 #shop-hours p {
-  margin-left: -270px;
   font-size: 18px;
+  justify-self: start;
 }
 
 .smaller-buttons {
@@ -270,7 +266,6 @@ h2 {
 footer {
   display: grid;
   grid-template-columns: 50% 50%;
-  width: 100%; 
   background: #ECEAE0;
   height: 100px;
   align-items: center;
@@ -287,13 +282,14 @@ footer h3{
   font-weight: 400;
   font-family: "Assistant";
   font-size: 16px;
+  margin-right: 10px;
 }
 
 
 .right {
   display: grid;
   grid-template-columns: 33% 33% 33%;
-  justify-items: left;
+  justify-items: right;
   align-items: center;
 }
 
@@ -324,6 +320,7 @@ footer form .subscribebtn {
   background: #F5F4EE;
   cursor: pointer;
   font-weight: 600;
+  margin-right: 80px;
 }
 
 footer form .subscribebtn:hover {
@@ -347,7 +344,6 @@ footer form .subscribebtn:hover {
 
 .product-card {
   margin-bottom: 30px;
-
 }
 
 h3 {
@@ -412,6 +408,7 @@ h6 {
 #storefront {
   margin: 90px 40px 110px 90px;
   float: left;
+  width: 50%;
 }
 
 #description-text {
@@ -441,12 +438,15 @@ h6 {
   display: grid;
   grid-template-columns: 50% 50%;
   height: 140px;
+  justify-items: center;
 }
 
 #about-bottom-bar p {
   color: #FFFFFF;
   font-size: 40px;
-  margin: 40px 90px 40px 90px;
+  justify-self: start;
+  align-self: center;
+  margin-left: 90px;
 }
 
 #about-bottom-bar button {
@@ -457,11 +457,11 @@ h6 {
   font-weight: bold;
   font-size: 22px;
   line-height: 28px;
-  text-align: center;
   padding: 10px 20px 10px 20px;
   color: #5C241B;
   border: none;
-  margin: 40px 0px 40px 460px;
+  margin: 40px 0px 40px 400px;
+
 }
 
 #about-bottom-bar button:hover {
@@ -473,98 +473,79 @@ h6 {
 
 /* FLAVORS PAGE */
 
-#flavor-selection {
+.flavor-selection {
   text-align:center;
   font-family: "Assistant";
+  margin-top: 30px;
 }
 
-#flavor-selection label {
+.flavor-selection label {
   font-size: 30px;
   font-weight: 600;
   color: #923A2D;
 }
 
-.select-selected {
-  background-color: DodgerBlue;
-}
 
-/* IMAGE SLIDESHOW */
-
-.flavors {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
+select {
+  appearance: none;
+  outline: 0;
+  background: white;
+  color: black;
   cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #DBD7C2;;
-  border-radius: 50%;
+  border:2px solid #5C241B;
+  border-radius:4px;
+  padding: 8px;
+  width: 200px;
   display: inline-block;
-  transition: background-color 0.6s ease;
+  margin-left: 10px;
 }
 
-.active, .dot:hover {
-  background-color: #ADAA9C;
+/* Code referenced from https://codepen.io/vkjgr/pen/VYMeXp */
+select.flavor {
+  background-image:
+    linear-gradient(45deg, transparent 50%, #5C241B 50%),
+    linear-gradient(135deg, #5C241B 50%, transparent 50%),
+    linear-gradient(to right, #ccc, #ccc);
+  background-position:
+    calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px),
+    calc(100% - 2.5em) 0.5em;
+  background-size:
+    5px 5px,
+    5px 5px,
+    1px 1.5em;
+  background-repeat: no-repeat;
 }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+.flavor-section {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin: 80px 90px 100px 80px;
 }
 
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+.flavor-image{
+  justify-self: end;
+  margin-right: 90px;
 }
 
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+.flavor-title-cart {
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 
+.nutrition {
+  display: grid;
+  grid-template-columns: 5% 95%;
+}
+
+.ingredients {
+  display: grid;
+  grid-template-columns: 5% 95%;
+}
+
+span {
+  font-weight: 700;
+}
 
 
 /* CONTACT US FORM */
